WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131383
FlagsChanged events are not delivered to input methods when using async text input
https://bugs.webkit.org/show_bug.cgi?id=131383
Summary
FlagsChanged events are not delivered to input methods when using async text ...
Alexey Proskuryakov
Reported
2014-04-08 12:29:30 PDT
<
rdar://problem/16460111
>
Attachments
proposed fix
(1.33 KB, patch)
2014-04-08 12:30 PDT
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-04-08 12:30:27 PDT
Created
attachment 228870
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2014-04-08 12:42:45 PDT
Committed <
http://trac.webkit.org/r166946
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug