FlagsChanged events are not delivered to input methods when using async text input https://bugs.webkit.org/show_bug.cgi?id=131383

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKView.mm: (-[WKView _interpretKeyEvent:completionHandler:]):
The early return is no longer needed.



Canonical link: https://commits.webkit.org/149431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166946 268f45cc-cd09-0410-ab3c-d52691b4dbfc